--- a/LoginTest/Assets/Base.lproj/Main.storyboard
+++ b/LoginTest/Assets/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TCF-WO-GS8">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="918"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app_icon" translatesAutoresizingMaskIntoConstraints="NO" id="eIf-6F-l4r">
                                                 <rect key="frame" x="107" y="32" width="200" height="180"/>
@@ -162,14 +162,14 @@
                                                 <rect key="frame" x="32" y="665.5" width="350" height="50"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XtH-Qn-Yct">
-                                                        <rect key="frame" x="0.0" y="0.0" width="35" height="50"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="33.5" height="50"/>
                                                         <state key="normal" image="facebook"/>
                                                         <connections>
                                                             <action selector="facebookSignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cf4-iN-sWD"/>
                                                         </connections>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WY9-w9-LAj">
-                                                        <rect key="frame" x="43" y="0.0" width="25" height="50"/>
+                                                        <rect key="frame" x="41.5" y="0.0" width="23.5" height="50"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="lji-oB-cHh"/>
                                                         </constraints>
@@ -178,7 +178,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gRD-8M-YHl" customClass="GIDSignInButton">
-                                                        <rect key="frame" x="76" y="0.0" width="274" height="50"/>
+                                                        <rect key="frame" x="73" y="0.0" width="277" height="50"/>
                                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="ORC-al-9ON"/>
@@ -212,7 +212,7 @@
                                 <constraints>
                                     <constraint firstItem="TCF-WO-GS8" firstAttribute="width" secondItem="49c-ZN-k1i" secondAttribute="width" id="Evk-PT-GHA"/>
                                     <constraint firstItem="TCF-WO-GS8" firstAttribute="leading" secondItem="49c-ZN-k1i" secondAttribute="leading" id="Oqq-Zs-o2F"/>
-                                    <constraint firstItem="TCF-WO-GS8" firstAttribute="height" secondItem="49c-ZN-k1i" secondAttribute="height" priority="250" id="Ye5-xK-BNE"/>
+                                    <constraint firstItem="TCF-WO-GS8" firstAttribute="height" secondItem="49c-ZN-k1i" secondAttribute="height" priority="250" constant="100" id="Ye5-xK-BNE"/>
                                     <constraint firstItem="TCF-WO-GS8" firstAttribute="top" secondItem="49c-ZN-k1i" secondAttribute="top" id="Yx8-nA-nTl"/>
                                     <constraint firstAttribute="trailing" secondItem="TCF-WO-GS8" secondAttribute="trailing" id="bT6-eV-Nh8"/>
                                     <constraint firstAttribute="bottom" secondItem="TCF-WO-GS8" secondAttribute="bottom" id="lBz-PN-Pef"/>
@@ -266,7 +266,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to DatingMatch" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="17v-qk-ZHv">
-                                <rect key="frame" x="32" y="343" width="204.5" height="32"/>
+                                <rect key="frame" x="32" y="156" width="204.5" height="32"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="32" id="Xjn-KP-PHt"/>
                                 </constraints>
@@ -275,7 +275,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="welcome" translatesAutoresizingMaskIntoConstraints="NO" id="pUd-aH-f2F">
-                                <rect key="frame" x="32" y="108" width="350" height="203"/>
+                                <rect key="frame" x="32" y="108" width="350" height="16"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
